[gd_scene load_steps=8 format=3 uid="uid://tl46bua3mbu5"]

[ext_resource type="Script" uid="uid://cxshkuvi58imr" path="res://scripts/status.gd" id="1_u3ihd"]
[ext_resource type="FontFile" uid="uid://dsv8rorgooxbr" path="res://assets/fonts/Micro5-Regular.ttf" id="2_rvgb4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lymi0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3ihd"]
bg_color = Color(0.33333334, 0.33333334, 0.33333334, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1254902, 0.1254902, 0.1254902, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvgb4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1gfk"]
bg_color = Color(0.33288068, 0.3328807, 0.33288056, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1254902, 0.1254902, 0.1254902, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_654pd"]
bg_color = Color(0.8819366, 0.8819366, 0.88193655, 1)

[node name="Status" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_u3ihd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -9.0
offset_right = 53.999992
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.2, 0.2)
theme_override_styles/panel = SubResource("StyleBoxFlat_lymi0")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_rvgb4")
theme_override_font_sizes/font_size = 22
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_u3ihd")
theme_override_styles/fill = SubResource("StyleBoxFlat_rvgb4")
value = 85.85
show_percentage = false

[node name="HungerBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_b1gfk")
theme_override_styles/fill = SubResource("StyleBoxFlat_654pd")
value = 91.71
show_percentage = false

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
